--- a/Reseaux2/test.html
+++ b/Reseaux2/test.html
@@ -3,10 +3,14 @@
 <head>
 	<title>Test Code color</title>
 	<meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <input type="text" id="chaine" name="texte"/>
+    <div id="entrees">
+      <input type="text" id="chaine" name="texte"/>
+      <button id="delete">Supprimer</button>
+    </div>
     <canvas id="tutorial" width="500" height="500"></canvas>
 		<script type="text/javascript" src="script.js"></script>
 </body>
