--- a/Reseaux2/test.html
+++ b/Reseaux2/test.html
@@ -9,6 +9,8 @@
 <body>
     <div id="entrees">
       <input type="text" id="chaine" name="texte"/>
+      <br/>
+      <button id="send">Valider</button>      
       <button id="delete">Supprimer</button>
     </div>
     <canvas id="tutorial" width="500" height="500"></canvas>
