reseau bien avancé

--- a/Reseaux2/test.html
+++ b/Reseaux2/test.html
@@ -13,8 +13,11 @@
       <button id="send">Valider</button>      
       <button id="delete">Supprimer</button>
     </div>
-    <canvas id="tutorial" width="500" height="500"></canvas>
-		<script type="text/javascript" src="script.js"></script>
+    <canvas id="tutorial" width="800" height="800"></canvas>
+    <!-- <div id="tab">
+
+    </div>
+		 --><script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
