--- a/Reseaux2/test.html
+++ b/Reseaux2/test.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Test Code color</title>
-	<meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <head>
+  	<title>Test Code color</title>
+  	<meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-<body>
-    <div id="entrees">
-      <input type="text" id="chaine" name="texte"/>
-      <br/>
-      <button id="send">Valider</button>      
-      <button id="delete">Supprimer</button>
-    </div>
-    <canvas id="tutorial" width="800" height="800"></canvas>
-    <!-- <div id="tab">
-
-    </div>
-		 --><script type="text/javascript" src="script.js"></script>
+  <body>
+      <div id="entrees">
+        <input type="text" id="chaine" name="texte"/>
+        <button id="send">Valider</button>      
+        <button id="delete">Supprimer</button>
+      </div>
+      <canvas id="tutorial" width="1000" height="1000"></canvas>
+      <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
